--- a/.github/workflows/pythonpublish-linux.yml
+++ b/.github/workflows/pythonpublish-linux.yml
@@ -1,5 +1,5 @@
 
-name: Python packages linux
+name: Generate standalone exe for linux
 
 on: [push]
 
@@ -7,17 +7,21 @@ jobs:
   build:
     name: build python packages
     runs-on: ubuntu-latest
-    container: jeandet/manylinuxcpp2017
+    container: centos:7.8.2003
     steps:
+      - name: install tools and python 3.8
+        run: yum install -y centos-release-scl-rh && yum update -y &&  yum install -y centos-release-scl git rh-python38-python-devel.x86_64 rh-python38-python-wheel.noarch rh-python38-python-pip.noarch
+      - name: fix python 3.8 so name for pyinstaller
+        run: ln -s /opt/rh/rh-python38/root/lib64/libpython3.8.so /opt/rh/rh-python38/root/lib64/libpython3.8.so.1.0
       - uses: actions/checkout@v1
         with:
           submodules: true
       - name: install deps
-        run: $PYTHON38/bin/pip install -e .
+        run: /opt/rh/rh-python38/root/bin/pip3 install -e .
       - name: install pyinstaller
-        run: $PYTHON38/bin/pip install git+https://github.com/pyinstaller/pyinstaller
+        run: /opt/rh/rh-python38/root/bin/pip3 install git+https://github.com/pyinstaller/pyinstaller
       - name: generate exe
-        run: $PYTHON38/bin/pyinstaller --onefile --windowed ./amda_sciqlop_speed_tester/speed_tester.spec
+        run: LD_LIBRARY_PATH=/opt/rh/rh-python38/root/lib64/ /opt/rh/rh-python38/root/usr/local/bin/pyinstaller --onefile --windowed ./amda_sciqlop_speed_tester/speed_tester.spec
       - uses: actions/upload-artifact@v2
         with:
           name: speed_tester-linux
